test/tasty/neg/src-2/TestHKNest.check
TestHKNest_fail.scala:7: error: Unsupported Scala 3 curried type application F[T][U] in signature of method foo
  def test13 = assert(new HKClass_13[HKLam].foo[Int,String](("",0)) == "(,0)") // error: unsupported curried type application
                                            ^
1 error
